# survey-gorilla

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini
applications/: constants.py  logging.py
applications/insights/: apps.py  serializers.py  services.py  urls.py  views.py
applications/insights/tests/: test_services.py  test_views.py  tests.py
applications/surveys/: admin.py  apps.py  models.py  services.py
applications/surveys/management/commands/: simulate_conversations.py
applications/surveys/migrations/: 0001_initial.py
applications/surveys/tests/: test_services.py  test_simulate_conversations_command.py  tests.py
config/: settings.py  urls.py
