[project]
name = "survey-gorilla"
version = "0.1.0"
description = "An AI-powered survey analysis tool"
authors = [
    {name = "Sharbel Dahlan"}
]
license = {text="MIT"}
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "django (==5.2.1)",
    "djangorestframework (==3.16.0)",
    "django-environ (==0.12.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"