[project]
name = "survey-gorilla"
version = "0.1.0"
description = "An AI-powered survey analysis tool"
authors = [
    {name = "Sharbel Dahlan"}
]
license = {text="MIT"}
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "django (==5.2.1)",
    "djangorestframework (==3.16.0)",
    "django-environ (==0.12.0)",
    "psycopg2-binary (==2.9.10)",
    "openai (==1.82.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-django = "4.11.1"
pytest-watch = "4.2.0"
pytest-cov = "6.1.1"
flake8 = "7.2.0"
mypy = "1.15.0"
pylint = "3.3.7"
ruff = "0.11.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"